Import solution to part 2